# pleh

./: .gitignore  Cargo.toml  README.md  build.sh  go.mod  go.sum  llama-cli  main.rs  pleh.go
pleh/go/: build.sh  pleh.go
pleh/python/: model.py
