[package]
name = "pleh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0"  # For command-line argument parsing
ggml = { git = "https://github.com/rust-formats/ggml" }  # Example for GGML-based models
tokio = { version = "1", features = ["full"] }  # For async runtime if needed
serde = { version = "1.0", features = ["derive"] }  # For JSON handling

[[bin]]
name = "pleh"
path = "main.rs"
